kube/dev-frontend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-frontend-nginx
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${DEV_SERVER_HOSTNAME}
      secretName: dev-tls
  rules:
    - host: ${DEV_SERVER_HOSTNAME}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-frontend-service
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-frontend-service
  namespace: dev
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: website-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-frontend
  namespace: dev
spec:
  revisionHistoryLimit: 1 # Default is 10, 1 allows to only keep one previous replicaset in case of need to rollback dev
  selector:
    matchLabels:
      app: website-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: website-frontend
    spec:
      containers:
      - name: website-frontend
        image: ghcr.io/matthiosso/website/frontend:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
