kube/dev-website-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-frontend-nginx
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dev.matthieuclement.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-frontend-service
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-frontend-service
  namespace: dev
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: website-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-frontend
  namespace: dev
spec:
  selector:
    matchLabels:
      app: website-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: website-frontend
    spec:
      containers:
      - name: website-frontend
        image: website-frontend:dev
        ports:
        - containerPort: 80
