kube/nginx-website-deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-frontend-nginx
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.matthieuclement.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-frontend-service
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-frontend-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: website

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  selector:
    matchLabels:
      app: website
  replicas: 2
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: ghcr.io/matthiosso/website-frontend:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
