kube/prod-backend-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-backend-nginx
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: ${PROD_SERVER_HOSTNAME}
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: website-backend-service
              port:
                number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: website-backend-service
  namespace: prod
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: website-backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-backend
  namespace: prod
spec:
  selector:
    matchLabels:
      app: website-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: website-backend
    spec:
      volumes:
      - name: data
        hostPath:
          path: /home/debian/data
      containers:
      - name: website-backend
        image: ghcr.io/matthiosso/website/backend:main
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
        volumeMounts:
        - name: data
          mountPath: /data
        ports:
        - containerPort: 8080
      imagePullSecrets: # See https://dev.to/asizikov/using-github-container-registry-with-kubernetes-38fb
      - name: dockerconfigjson-github-com
