kube/prod-frontend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-frontend-nginx
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${PROD_SERVER_HOSTNAME}
        - ${SERVER_DOMAIN}
      secretName: prod-tls
  rules:
    - host: ${PROD_SERVER_HOSTNAME}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-frontend-service
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-frontend-service
  namespace: prod
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: website-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-frontend
  namespace: prod
spec:
  selector:
    matchLabels:
      app: website-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: website-frontend
    spec:
      containers:
      - name: website-frontend
        image: ghcr.io/matthiosso/website/frontend:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets: # See https://dev.to/asizikov/using-github-container-registry-with-kubernetes-38fb
      - name: dockerconfigjson-github-com
