kube/traefik-website-deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-traefik
  annotations:
    traefik.ingress.kubernetes.io/redirect-regex: "^https?://(?:www\\.)?(.+)"
    traefik.ingress.kubernetes.io/redirect-replacement: "https://www.${1}"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: "www.matthieuclement.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: website-service
            port:
              number: 80
  - host: "matthieuclement.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: website-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: website-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-app
spec:
  selector:
    matchLabels:
      app: website-app
  replicas: 2
  template:
    metadata:
      labels:
        app: website-app
    spec:
      containers:
      - name: website
        image: ghcr.io/matthiosso/website:main
        ports:
        - containerPort: 80
